# ml_template

./: Makefile  README.md  pyproject.toml
docker/: base.docker
docs/: CONTRIBUTION.md  todo.md
ml_template/: exceptions.py
ml_template/cli/: train.py
ml_template/models/: estimator.py  transformers.py
server/: main.py
tests/neerner/: test_estimator.py  test_transformer.py
