[tool.poetry]
name = "ml_template"
version = "0.1.0"
description = "Risk as a service"
authors = ["ml_template"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
loguru = "^0.7.2"
numpy = "^1.26.2"
nltk = "^3.8.1"
pandera = {extras=["mypy"], version="0.17.0"}
tqdm = "^4.66.1"
fire = "^0.5.0"
fastapi = {version="^0.105.0", optional=true}
uvicorn = {extras=["standard"], version="^0.24.0.post1", optional=true}
pyarrow = "^14.0.2"

[tool.poetry.extras]
server = ["fastapi", "uvicorn"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
mypy = "^1.7.1"
pytest = "^7.4.3"
coverage = {extras=["toml"], version="^7.3.2"}
ipykernel = "^6.27.1"
faker = "^21.0.0"
ipywidgets = "^8.1.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 90
ignore_errors = true
source = ["ml_template"]

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["scripts", "docs", "test"]
plugins = [
    "pandera.mypy",
    "numpy.typing.mypy_plugin"
]

[[tool.mypy.overrides]]
module = "fire.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "joblib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandarallel.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true